IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/2/14: IMOD_4-8-3
4/2/14: Fixed pixel size and model scaling set from a TIFF file when there is
a resolution with no units (In 4.7).

4/2/14: Fixed setupstitch when there is an error reading header (In 4.7).

4/1/14: Improved unit tests for the PEET interface in eTomo.(Bug# 1794)

3/31/14:IMOD_4-7-3 released
3/29/14: In eTomo - PEET, fixed the loading of a non-array selectClassID
value, and fixed more problems with unnecessary errors generated because of
missing parameters (In 4.7).(Bug# 1789)

3/27/14: Fixed a communication problem between eTomo and 3dmod and rolled back
previous incorrect fixes from 2/14/14 and 3/14/14 (In 4.7).(Bug# 1792)

3/27/14: Fixed HDF writing, optimized chunk cache size for volume writing,
fixed pyramid creation, made 3dmod recognize tiling in HDF file.

3/24/14: IMOD_4-8-2
3/23/14: Eliminated an input routine that reads line-by-line, which was giving
terrible 3dmod performance on Mac laptops loading over a network.

3/22/14: Programs can now read and write HDF files interchangeably with MRC
files. Write performance is currently atrocious.  Metadata can be stored as
well; Newstack will move metadata between an HDF file and an .mdoc file
associated with another file type, or even between two mdoc files.  Supported
HDF files can consist of stacks of 2D images of the same size, or files with
multiple 3D volumes, which 3dmod will open like multiple files.  Makepyramid
can make a multi-volume HDF file that 3dmod will recognize as an image
pyramid.

3/22/14: Fixed newstack when -fromone used with default section list (In 4.7).

3/14/14: Fixed a Windows problem with opening 3dmod from eTomo where
imodsendevent was called incorrectly (In 4.7).(Bug# 1786)

3/14/14: Made the close button on the detached toolbar of linked slicers close
all the linked slicers (In 4.7).

3/13/14: Fixed a problem in eTomo - PEET where tilt angles where not being