@@ -82,6 +82,8 @@ The options
 , 
 .B -c
 , 
+.B -e
+, 
 .B -l
 , 
 .B -L
@@ -139,6 +141,18 @@ has one defined.
 .TP
 .B -r
 Print ratio of length to area for closed contours.
+.TP
+.B -e
+Print properties of equivalent ellipses for closed contours.  The
+equivalent ellipse is the one with the same second moments as the area
+enclosed by a contour.  Only the X and Y coordinates are the points are
+considered when computing these ellipses.  For each contour, the values
+reported are the X and Y center coordinates of the ellipse (i.e, the
+centroid of the contour area), the average Z coordinate of the contour
+points, all in pixels, the semi-major and semi-minor axes in scaled
+units, the eccentricity (a value between 0 for a circle and 1 for a
+maximally elongaed ellipse), and the angle ofthe semi-major axis (a
+value between 0 and 180).
 .TP
 .B -F
 Print full report on the objects, a collection of summary information.
