@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+4/8/14: Add ability to copy a contour as its equivalent ellipse in 3dmod, and
+get report of equivalent ellipse parameters in imodinfo.
+
 4/2/14: IMOD_4-8-3
 4/2/14: Fixed pixel size and model scaling set from a TIFF file when there is
 a resolution with no units (In 4.7).
